navbar: fixed collapsed toggle button

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -20,3 +20,7 @@
     font-size: x-large;
 }
 
+    
+.icon-bar {
+    background-color: white;
+}
